--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,21 +13,21 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 15.x, 16.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: checkout code
+      uses: actions/checkout@v2
+
+    - name: install Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 16.x
+
     - name: npm ci, build and test
       run: |
         npm ci
-        npm run build --if-present
+        npm run build
         npm test
+
     - name: deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
