--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,6 +8,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    strategy:
+      node-version: 16
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
