--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,10 +33,10 @@ jobs:
       run: npm install
 
     - name: Build
-      run: npm build
+      run: npm run build
 
     - name: Test
-      run: npm test
+      run: npm run test
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
