--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,22 +17,21 @@ jobs:
       env:
         cache-name: cache-node-modules
       with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        path: |
+          ~/.npm
+          **/node_modules
+        key: ${{ runner.os }}-node-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
+          ${{ runner.os }}-node-${{ env.cache-name }}-
+          ${{ runner.os }}-node-
           ${{ runner.os }}-
 
     - name: Install Dependencies
+      if: steps.npm-cache.outputs.cache-hit != 'true'
       run: npm install
 
     - name: Build
       run: npm run build
-
-    - name: Test
-      run: npm run test
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
