--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -14,21 +14,16 @@ jobs:
 
     - name: Cache node modules
       uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
+      id: npm-cache
       with:
         path: |
           ~/.npm
           **/node_modules
-        key: ${{ runner.os }}-node-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-${{ env.cache-name }}-
-          ${{ runner.os }}-node-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
     - name: Install Dependencies
       if: steps.npm-cache.outputs.cache-hit != 'true'
-      run: npm install
+      run: npm ci
 
     - name: Build
       run: npm run build
