--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,9 +16,7 @@ jobs:
       uses: actions/cache@v2
       id: npm-cache
       with:
-        path: |
-          ~/.npm
-          **/node_modules
+        path: '**/node_modules'
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
     - name: Install Dependencies
